--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
+    "resend": "^6.9.1",
     "sharp": "^0.34.5",
     "uuid": "^13.0.0"
   },
